Se corrigen metodos CRUD de las tablas principales y se crean los types
