# src/app.ts
@@ -2,7 +2,9 @@ import express from 'express';
 import userRouter from './c_user/user.route';
 import authRoute from "./c_auth/auth.route";
 import transactionRoute from "./c_transaction/transaction.route";
-import accountRouter from "./c_account/account.route";
+import transactionTypeRoute from "./c_transaction_type/transactionType.route";
+import accountRoute from "./c_account/account.route";
+import accountTypeRoute from "./c_account_type/accountType.route";
 import { loggerMiddleware } from "./Middleware/logger.middleware";
 import { httpErrorHandle } from './Middleware/httpErrorHandler.middleware';
 
@@ -21,9 +23,11 @@ app.use(express.urlencoded({ extended: true }));
 
 app.use(loggerMiddleware);
 app.use("/api/v1/auth", authRoute);
+app.use("/api/v1/transactiontype", transactionTypeRoute);
+app.use("/api/v1/accounttype", accountTypeRoute);
 app.use("/api/v1/user", userRouter);
 app.use("/api/v1/transaction", transactionRoute);
-app.use("/api/v1/account", accountRouter);
+app.use("/api/v1/account", accountRoute);
 app.use(httpErrorHandle);
 
 export default app;
