# src/c_transaction_type/transactionType.route.ts
@@ -1,0 +1,11 @@
+import { Router } from "express"
+import { TransactionTypeController } from "./transactionType.controller";
+
+const router = Router();
+
+router.get('/', TransactionTypeController.getTransactionType);
+
+
+
+export default router;
+
