# swagger.yml
@@ -48,21 +48,19 @@
         responses:
           '201':
             description: Usuario registrado exitosamente
-    /user/by-email:
-      delete:
-        summary: Desactivar usuario por email
-        security:
-          - bearerAuth: []
-        parameters:
-          - in: query
-            name: email
-            schema:
-              type: string
-            required: true
-            description: Email del usuario
+    /transactiontype:
+      get:
+        summary: Obtener tipos de transacciones
         responses:
           '200':
-            description: Usuario desactivado exitosamente
+            description: Tipos de transacciones obtenidos exitosamente
+    /accounttype:
+      get:
+        summary: Obtener tipos de cuentas
+        responses:
+          '200':
+            description: Tipos de cuentas obtenidos exitosamente
+    /user/by-email:
       get:
         summary: Obtener usuario por email
         security:
@@ -98,6 +96,20 @@
         responses:
           '200':
             description: Usuario actualizado exitosamente
+      get:
+          summary: Obtener datos del usuario
+          security:
+            - bearerAuth: []
+          responses:
+            '200':
+              description: Usuario obtenido exitosamente
+      delete:
+        summary: Desactivar usuario por email
+        security:
+          - bearerAuth: []
+        responses:
+          '200':
+            description: Usuario desactivado exitosamente
     /account:
       patch:
         summary: Actualizar cuenta por ID
@@ -146,9 +158,6 @@
               schema:
                 type: object
                 properties:
-                  id_user:
-                    type: string
-                    example: 4fc3b1f4-7f8e-42a6-87b1-8a9366f2bd60
                   name:
                     type: string
                     example: Banco Prueba
@@ -170,16 +179,9 @@
             description: Cuenta creada exitosamente
     /account/user/{id_user}:
       get:
-        summary: Obtener cuentas por ID de usuario
+        summary: Obtener cuentas del usuario autenticado
         security:
           - bearerAuth: []
-        parameters:
-          - in: path
-            name: id_user
-            schema:
-              type: string
-            required: true
-            description: ID del usuario
         responses:
           '200':
             description: Cuentas obtenidas exitosamente
@@ -257,9 +259,6 @@
               schema:
                 type: object
                 properties:
-                  id_user:
-                    type: string
-                    example: 4fc3b1f4-7f8e-42a6-87b1-8a9366f2bd60
                   id_account:
                     type: string
                     example: 03cea39e-595c-4330-a191-7c0328abf471
@@ -284,13 +283,6 @@
         summary: Obtener transacciones por ID de usuario
         security:
           - bearerAuth: []
-        parameters:
-          - in: path
-            name: id_user
-            schema:
-              type: string
-            required: true
-            description: ID del usuario
         responses:
           '200':
             description: Transacciones obtenidas exitosamente
@@ -323,6 +315,7 @@
         responses:
           '200':
             description: Transacción eliminada exitosamente
+
   components:
     securitySchemes:
       bearerAuth:
